--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "design system"
   ],
   "author": "15Fathoms",
+  "repository": {
+    "type": "git",
+    },
   "license": "MIT",
   "dependencies": {
     "colorjs.io": "^0.5.2",
